bug fix resolution mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -281,7 +281,6 @@ height: 20vh;
         background-image: url(../images/320.png);
         height: 150px;
         border-radius: 5px;
-        margin-left: -35px;
     }
 
 }
